--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
+        "te7a-houdini/laravel-trix": "^1.1",
         "wizi/wizi-yousign-client": "^1.4"
     },
     "require-dev": {
